--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="about-details-container">
           <div class="about-containers">
             <div class="text-container">
-              <p style="text-align: justify;">I'm a quick learner and self-motivated individual, with over 3 years of professional experience as a Software Engineer. Specializing in C# programming and structured, test-driven software development, I thrive on solving complex problems and delivering high-quality solutions to meet the needs of our customers.</p>
+              <p style="text-align: justify;">I'm a quick learner and self-motivated Software Engineer with over 3.3 years of experience. I specialize in C# programming and structured test-driven software development. I solve complex problems and deliver high-quality solutions that meet customers' needs.</p>
               <br>
               <p style="text-align: justify;">I'm most comfortable with C#, .NET Core, and relational databases like MySQL and MSSQL, but I'm also flexible and eager to work with new technologies and programming languages.</p>
               <br>
@@ -124,10 +124,20 @@
               <br>
             </div>
             <ul>
-              <li style="text-align: justify;">Achieved a 90% reduction in manual efforts with automated candidate application email parsing.</li>
-              <li style="text-align: justify;">Led the design and development of a streamlined Single Sign-On (SSO) Authentication and Authorization mechanism in Compass to enhance user experience and security.</li>
-              <li style="text-align: justify;">Optimized overall functionality and system performance by integrating and optimizing Modern Hire, Daxtra Search, Survale, and Lgorithm within the Compass application.</li>
-              <li style="text-align: justify;">Boosted application performance by 45% by conducting comprehensive code optimization and optimizing database operations.</li>
+              <p style="text-align: left;"><b>Candidate Auto-Parsing:</b></p>
+              <li style="text-align: justify;">Developed a WebHook API integration with Power Automate to fully automate candidate application parsing from iCIMS, accelerating processing times and reducing manual workload by 60%.</li>
+              <li style="text-align: justify;">Automated candidate application email parsing, reducing manual effort by 90%.</li>
+              <br>
+              <p style="text-align: left;"><b>Azure AD SSO Integration:</b></p>
+              <li style="text-align: justify;">Led the design and development of a Single Sign-On (SSO) Authentication and Authorization mechanism in Compass to enhance user experience and security.</li>
+              <br>
+              <p style="text-align: left;"><b>System Optimization:</b></p>
+              <li style="text-align: justify;">Integrated and optimized third-party tools (Modern Hire, Daxtra Search, Survale, Lgorithm) within Compass, improving overall functionality and boosting system performance.</li>
+              <li style="text-align: justify;">Conducted comprehensive code optimizations and streamlined database operations, leading to a 45% increase in application performance.</li>
+              <li style="text-align: justify;">Implemented a randomization algorithm to optimize survey distribution to candidates, enhancing analytics efficiency and data accuracy.</li>
+              <br>
+              <p style="text-align: left;"><b>Asynchronous Process Implementation:</b></p>
+              <li style="text-align: justify;">Designed a Disconnected Architecture using Azure Functions and Message Queues to enable asynchronous, non-blocking operations, enhancing system scalability and performance through decoupled workflows, and improving latency by 30% on average.</li>
             </ul>
           </div>
           <div class="details-container">
@@ -137,11 +147,17 @@
               <br>
             </div>
             <ul>
-              <li style="text-align: justify;">Developed front-end components and back-end APIs using Angular and ASP.NET Core for Real-Time Medical Systems.</li>
-              <li style="text-align: justify;">Migrated database infrastructure from MSSQL to MySQL using Skeema.io and Flywaydb, improving scalability, performance, and cost efficiency.</li>
+              <p style="text-align: left;"><b>Real-Time Medical Systems Development:</b></p>
+              <li style="text-align: justify;">Developed responsive dashboards and reports using ASP.NET Core Web API and Angular, empowering healthcare providers with real-time insights for data-driven decision-making.</li>
               <li style="text-align: justify;">Improved application response time by 40% through targeted optimizations using MiniProfiler.</li>
               <li style="text-align: justify;">Achieved a 30% faster query response time by optimizing the database queries for large datasets.</li>
+              <li style="text-align: justify;">Redesigned the distributed caching mechanism using Castle Core, enhancing system performance.</li>
+              <br>
+              <p style="text-align: left;"><b>Technology Upgrades and Database Migration:</b></p>
               <li style="text-align: justify;">Upgraded Angular from version 8 to 15 and .NET libraries from version 4.7 to 6 in service-based projects.</li>
+              <li style="text-align: justify;">Migrated database infrastructure from MSSQL to MySQL using Skeema.io and Flywaydb, improving scalability, performance, and cost efficiency.</li>
+              <br>
+              <p style="text-align: left;"><b>Mentorship:</b></p>
               <li style="text-align: justify;">Supervised and mentored a team of 6 interns, facilitating their professional growth and project contributions.</li>
             </ul>
           </div>
@@ -154,6 +170,22 @@
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
+          <div class="details-container color-container">
+            <div style="text-align: left">
+              <h2>Sudoku Solver</h2>
+            </div>
+            <ul>
+              <li style="text-align: justify;">A web-based Sudoku solver application built with ASP.NET Core, allowing users to input an unsolved Sudoku puzzle and receive the solved output. The application uses a backtracking algorithm to solve the puzzle, systematically attempting to place digits and backtracking as needed to find a valid solution.</li>
+              <p style="text-align: justify;">
+                <a
+                  target="_blank"
+                  href="https://github.com/ravikumarmakwana/SudokuSolver">
+                  Check out the Repository
+              </a>
+              </p>
+            </ul>
+          </div>
+          <br>
           <div class="details-container color-container">
             <div style="text-align: left">
               <h2>GroupBalancer</h2>
