--- a/index.html
+++ b/index.html
@@ -93,16 +93,17 @@
         <div class="about-details-container">
           <div class="about-containers">
             <div class="text-container">
-              <p style="text-align: justify;">I'm a quick learner and self-motivated Software Engineer with over 3.4 years of experience. I specialize in C# programming and structured test-driven software development. I solve complex problems and deliver high-quality solutions that meet customers' needs.</p>
+              <p style="text-align: justify;">I'm a quick learner and self-motivated Software Engineer with over 3.6 years of experience. I specialize in C# programming and structured test-driven software development. I solve complex problems and deliver high-quality solutions that meet customers' needs.</p>
+              <br>
+              <p style="text-align: justify;"><b>Technical Skills: -</b></p>
+              <p style="text-align: justify;"><b>Programming Language:</b> C#</p>
+              <p style="text-align: justify;"><b>Backend:</b> ASP.NET Core Web API, Entity Framework Core, Dapper ORM, LINQ, ADO.NET</p>
+              <p style="text-align: justify;"><b>Unit Testing:</b> MsTest, xUnit, Nunit</p>
+              <p style="text-align: justify;"><b>Frontend:</b> HTML, CSS, JavaScript, TypeScript, Angular</p>
+              <p style="text-align: justify;"><b>Databases:</b> MSSQL, MySQL, Redis</p>
+              <p style="text-align: justify;"><b>Cloud Computing:</b> Microsoft Azure</p>
               <br>
               <p style="text-align: justify;">I'm most comfortable with C#, .NET Core, and relational databases like MySQL and MSSQL, but I'm also flexible and eager to work with new technologies and programming languages.</p>
-              <br>
-              <p style="text-align: justify;"><b>Technical Skills: -</b></p><br>
-              <p style="text-align: justify;"><b>Programming Language:</b> C#</p>
-              <p style="text-align: justify;"><b>Backend:</b> ASP.NET Core Web API, MVC, EF Core, Dapper, MS Testing, xUnit Testing, NUnit Testing</p>
-              <p style="text-align: justify;"><b>Frontend:</b> HTML, CSS, JavaScript, TypeScript, Angular</p>
-              <p style="text-align: justify;"><b>Databases:</b> MSSQL, MySQL</p>
-              <p style="text-align: justify;"><b>Cloud Computing:</b> Microsoft Azure</p>
               <br>
               <p style="text-align: justify;">My highest qualification is a Bachelor of Computer Engineering, completed in 2021 from V.V.P. Engineering College.</p>
               <br>
@@ -179,6 +180,7 @@
               <p style="text-align: justify;">
                 <a
                   target="_blank"
+                  style="color: rgb(4, 146, 234);"
                   href="https://github.com/ravikumarmakwana/SudokuSolver">
                   Check out the Repository
               </a>
@@ -197,6 +199,7 @@
               <p style="text-align: justify;">
                 <a
                   target="_blank"
+                  style="color: rgb(4, 146, 234);"
                   href="https://github.com/ravikumarmakwana/GroupBalancer">
                   Check out the Repository
               </a>
@@ -217,6 +220,7 @@
               <p style="text-align: justify;">
                 <a
                   target="_blank"
+                  style="color: rgb(4, 146, 234);"
                   href="https://github.com/ravikumarmakwana/Collaborative-Draw">
                   Check out the Repository
               </a>
@@ -236,6 +240,7 @@
               <p style="text-align: justify;">
                 <a
                   target="_blank"
+                  style="color: rgb(4, 146, 234);"
                   href="https://github.com/ravikumarmakwana/QuickBank">
                   Check out the Repository
               </a>
