--- a/index.html
+++ b/index.html
@@ -173,6 +173,25 @@
         <div class="about-containers">
           <div class="details-container color-container">
             <div style="text-align: left">
+              <h2>URL Shortener - Scalable & Secure Link Management</h2>
+            </div>
+            <ul>
+              <li style="text-align: justify;">Engineered a high-performance URL Shortener using ASP.NET Core and Angular, leveraging microservices architecture for modularity, scalability, and fault tolerance.</li>
+              <li style="text-align: justify;">Implemented optimized Base62 encoding, enabling 900M+ unique short URLs, ensuring minimal collisions and efficient URL resolution.</li>
+              <li style="text-align: justify;">Developed a robust authentication system using JWT & API Gateway, enabling secure, token-based access across distributed microservices.</li>
+              <p style="text-align: justify;">
+                <a
+                  target="_blank"
+                  style="color: rgb(4, 146, 234);"
+                  href="https://github.com/ravikumarmakwana/URL-Shortener">
+                  Check out the Repository
+              </a>
+              </p>
+            </ul>
+          </div>
+          <br>
+          <div class="details-container color-container">
+            <div style="text-align: left">
               <h2>Sudoku Solver</h2>
             </div>
             <ul>
