--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
               <br>
               <p style="text-align: left;"><b>Asynchronous Process Implementation:</b></p>
               <li style="text-align: justify;">Designed a Disconnected Architecture using Azure Functions and Message Queues to enable asynchronous, non-blocking operations, enhancing system scalability and performance through decoupled workflows, and improving latency by 30% on average.</li>
+              <br>
+              <p style="text-align: left;"><b>Technical Hiring & Evaluation:</b></p>
+              <li style="text-align: justify;">Conducted technical evaluations and interviews for 6 joining developers, ensuring strong technical fit and team alignment.</li>
             </ul>
           </div>
           <div class="details-container">
