--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="about-details-container">
           <div class="about-containers">
             <div class="text-container">
-              <p style="text-align: justify;">I'm a quick learner and self-motivated Software Engineer with over 3.6 years of experience. I specialize in C# programming and structured test-driven software development. I solve complex problems and deliver high-quality solutions that meet customers' needs.</p>
+              <p style="text-align: justify;">I'm a quick learner and self-motivated Software Engineer with over 3.9 years of experience. I specialize in C# programming and structured test-driven software development. I solve complex problems and deliver high-quality solutions that meet customers' needs.</p>
               <br>
               <p style="text-align: justify;"><b>Technical Skills: -</b></p>
               <p style="text-align: justify;"><b>Programming Language:</b> C#</p>
@@ -125,23 +125,11 @@
               <br>
             </div>
             <ul>
-              <p style="text-align: left;"><b>Candidate Auto-Parsing:</b></p>
-              <li style="text-align: justify;">Developed a WebHook API integration with Power Automate to fully automate candidate application parsing from iCIMS, accelerating processing times and reducing manual workload by 60%.</li>
-              <li style="text-align: justify;">Automated candidate application email parsing, reducing manual effort by 90%.</li>
-              <br>
-              <p style="text-align: left;"><b>Azure AD SSO Integration:</b></p>
-              <li style="text-align: justify;">Led the design and development of a Single Sign-On (SSO) Authentication and Authorization mechanism in Compass to enhance user experience and security.</li>
-              <br>
-              <p style="text-align: left;"><b>System Optimization:</b></p>
-              <li style="text-align: justify;">Integrated and optimized third-party tools (Modern Hire, Daxtra Search, Survale, Lgorithm) within Compass, improving overall functionality and boosting system performance.</li>
-              <li style="text-align: justify;">Conducted comprehensive code optimizations and streamlined database operations, leading to a 45% increase in application performance.</li>
-              <li style="text-align: justify;">Implemented a randomization algorithm to optimize survey distribution to candidates, enhancing analytics efficiency and data accuracy.</li>
-              <br>
-              <p style="text-align: left;"><b>Asynchronous Process Implementation:</b></p>
-              <li style="text-align: justify;">Designed a Disconnected Architecture using Azure Functions and Message Queues to enable asynchronous, non-blocking operations, enhancing system scalability and performance through decoupled workflows, and improving latency by 30% on average.</li>
-              <br>
-              <p style="text-align: left;"><b>Technical Hiring & Evaluation:</b></p>
-              <li style="text-align: justify;">Conducted technical evaluations and interviews for 6 joining developers, ensuring strong technical fit and team alignment.</li>
+              <li style="text-align: justify;"><b>ATS Integration System:</b> Implemented scalable integration between ATS platforms (Bullhorn and iCIMS) and Compass using high-performance Webhook APIs, enabling seamless candidate data retrieval, reducing processing time by 60%, and enhancing system reliability.</li>
+              <li style="text-align: justify;"><b>Intelligent Email Parsing:</b> Led the design and development of an event-driven email parser that processes 50,000+ applications weekly, reducing recruiters’ manual workload by 90%.</li>
+              <li style="text-align: justify;"><b>Azure AD SSO Integration:</b> Implemented Single Sign-On (SSO) authentication using Azure AD OAuth2 & OpenID Connect, securing access for 2,000+ daily users.</li>
+              <li style="text-align: justify;"><b>High-Performance System Optimization:</b> Optimized third-party integrations (Modern Hire, Daxtra Search, Survale) to handle 10,000+ daily transactions with high availability and efficiency. Enhanced application performance by 45% through database query and code optimizations.</li>
+              <li style="text-align: justify;"><b>Event-Driven Asynchronous Processing:</b> Architected an Azure Functions-based event-driven system using message queues, reducing system latency by 30%.</li>
             </ul>
           </div>
           <div class="details-container">
@@ -151,18 +139,11 @@
               <br>
             </div>
             <ul>
-              <p style="text-align: left;"><b>Real-Time Medical Systems Development:</b></p>
-              <li style="text-align: justify;">Developed responsive dashboards and reports using ASP.NET Core Web API and Angular, empowering healthcare providers with real-time insights for data-driven decision-making.</li>
-              <li style="text-align: justify;">Improved application response time by 40% through targeted optimizations using MiniProfiler.</li>
-              <li style="text-align: justify;">Achieved a 30% faster query response time by optimizing the database queries for large datasets.</li>
-              <li style="text-align: justify;">Redesigned the distributed caching mechanism using Castle Core, enhancing system performance.</li>
-              <br>
-              <p style="text-align: left;"><b>Technology Upgrades and Database Migration:</b></p>
-              <li style="text-align: justify;">Upgraded Angular from version 8 to 15 and .NET libraries from version 4.7 to 6 in service-based projects.</li>
-              <li style="text-align: justify;">Migrated database infrastructure from MSSQL to MySQL using Skeema.io and Flywaydb, improving scalability, performance, and cost efficiency.</li>
-              <br>
-              <p style="text-align: left;"><b>Mentorship:</b></p>
-              <li style="text-align: justify;">Supervised and mentored a team of 6 interns, facilitating their professional growth and project contributions.</li>
+              <li style="text-align: justify;"><b>Real-Time Medical Systems Development:</b> Developed responsive dashboards and reports using ASP.NET Core Web API and Angular, provided healthcare providers with real-time insights to enhance data-driven decision-making.</li>
+              <li style="text-align: justify;"><b>Performance Tuning:</b> Identified bottlenecks using MiniProfiler, refined database queries, and accelerated query response times by 30%, leading to a significantly enhanced user experience and improved customer satisfaction.</li>
+              <li style="text-align: justify;"><b>Scalability Enhancements:</b> Upgraded Angular (v8 to v15) and .NET libraries (v4.7 to v6). Migrated MSSQL database to MySQL using Skeema.io and FlywayDB, enhancing scalability and reducing costs.</li>
+              <li style="text-align: justify;"><b>Cache System:</b> Led the Implementation of a distributed caching mechanism using Castle Core, significantly enhancing system performance under high traffic conditions.</li>
+              <li style="text-align: justify;"><b>Mentorship:</b> Supervised and mentored a team of 6 interns, facilitating their professional growth and project contributions.</li>
             </ul>
           </div>
         </div>
