Remove direct download

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <header>
     <h1 class="fw-bold">Hello, I'm Ravikumar Makwana</h1>
     <p class="mb-3">Senior Software Engineer • C# • ASP.NET Core • Microsoft Azure • Angular • Scalable System Design</p>
-    <a href="./assets/Ravikumar Makwana.pdf" target="_blank" download class="btn btn-sm btn-custom">Download CV</a>
+    <a href="./assets/Ravikumar Makwana.pdf" target="_blank" class="btn btn-sm btn-custom">Download CV</a>
     <div class="info-links mt-4">
       <a href="https://www.linkedin.com/in/ravikumar-makwana" target="_blank" style="color: white;"><i class="fab fa-linkedin"></i> LinkedIn: ravikumar-makwana</a>
       <a href="https://github.com/ravikumarmakwana" target="_blank" style="color: white;"><i class="fab fa-github"></i> GitHub: ravikumarmakwana</a>
