--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
           <strong>Languages:</strong> C#, SQL, JavaScript
           <br><strong>Frameworks & Libraries:</strong> ASP.NET Core Web API, Entity Framework, Dapper, Angular, LINQ
           <br><strong>Cloud & DevOps:</strong> Microsoft Azure, Azure DevOps, Redis, Git
+          <br><strong>Databases:</strong> SQL Server, MySQL
           <br><strong>Tools & Project Management:</strong> Jira, Git
           <br><strong>Unit Testing:</strong> MsTest, xUnit, NUnit
           <br><strong>Concepts & Architecture:</strong> Microservices Architecture, SOLID Principles, Design Patterns, Data Structures & Algorithms
