--- a/index.html
+++ b/index.html
@@ -59,24 +59,22 @@
     }
 
     .info-links {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 15px;
-      font-size: 1rem;
+      text-align: center;
+      margin-top: 20px;
     }
 
     .info-links a {
-      color: #333;
       text-decoration: none;
-      display: flex;
-      align-items: center;
-      gap: 10px;
+      color: white;
+      font-size: 0.95rem;
+      transition: color 0.2s;
     }
 
     .info-links a:hover {
       text-decoration: underline;
+      color: #ffd6e8;
     }
+
 
     .experience-box, .education-box {
       background: #fff;
@@ -111,11 +109,12 @@
     <p class="mb-3">Senior Software Engineer • C# • ASP.NET Core • Microsoft Azure • Angular • Scalable System Design</p>
     <a href="./assets/Ravikumar Makwana.pdf" target="_blank" class="btn btn-sm btn-custom">Download CV</a>
     <div class="info-links mt-4">
-      <a href="https://www.linkedin.com/in/ravikumar-makwana" target="_blank" style="color: white;"><i class="fab fa-linkedin"></i> LinkedIn: ravikumar-makwana</a>
-      <a href="https://github.com/ravikumarmakwana" target="_blank" style="color: white;"><i class="fab fa-github"></i> GitHub: ravikumarmakwana</a>
-      <a href="mailto:ravikumar.makwana.18@gmail.com" style="color: white;"><i class="fas fa-envelope"></i> Email: ravikumar.makwana.18@gmail.com</a>
-      <a href="tel:+916354508988" style="color: white;"><i class="fas fa-phone"></i> Mobile: +91 6354508988</a>
-      <a href="https://leetcode.com/u/RavikumarMakwana" target="_blank" style="color: white;"><i class="fas fa-code"></i> LeetCode: RavikumarMakwana</a>
+      <a href="https://www.linkedin.com/in/ravikumar-makwana" target="_blank" style="color: white; font-size: large;"><i class="fab fa-linkedin"></i> LinkedIn</a> &nbsp; 
+      <a href="https://github.com/ravikumarmakwana" target="_blank" style="color: white;font-size: large;"><i class="fab fa-github"></i> GitHub</a> &nbsp; 
+      <a href="mailto:ravikumar.makwana.18@gmail.com" style="color: white;font-size: large;"><i class="fas fa-envelope"></i> Email</a> &nbsp; 
+      <a href="tel:+916354508988" style="color: white;font-size: large;"><i class="fas fa-phone"></i> Mobile</a> &nbsp; 
+      <a href="https://leetcode.com/u/RavikumarMakwana" target="_blank" style="color: white;font-size: large;"><i class="fas fa-code"></i> LeetCode</a> &nbsp; 
+      <a href="https://medium.com/@ravikumar.makwana" target="_blank" style="color: white;font-size: large;"><i class="fas fa-book"></i> Medium</a>
     </div>
   </header>
 
@@ -260,7 +259,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>© 2025 Ravikumar Makwana</p>
+    Made with <span style="color: #ff4d9e; font-size: 1.2rem;">&#10084;&#65039;</span> by Ravikumar Makwana
   </footer>
 
   <!-- Scripts -->
