Update Job Role

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         <h6>Jun 2025 - Present</h6>
         <ul>
           <li style="text-align: justify;"><b>High-Volume ATS Integration using API Batch Processing:</b> Led the design and development of Bullhorn ATS integration into Compass using public APIs — built from scratch with the Factory Design Pattern and Microservices architecture, enabling seamless hiring and processing over 15,000 candidates daily.</li>
+          <li style="text-align: justify;"><b>Automated Candidate Engagement:</b> Simplified a core Compass function at the system level, overcoming Twilio SMS stateless limitations to ensure consistent response mapping and deliver a better user experience.</li>
         </ul>
       </div>
       <div class="experience-box">
